[metadata]
name = interception-wrapper
version = 0.0.1
author = Ivan Buldakov
author_email = iv081198@yandex.ru
description = Simple wrapper for interception_py package
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/GanterPenguin/interception-wrapper
project_urls =
    Bug Tracker = https://github.com/GanterPenguin/interception-wrapper/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
dependency_links = https://github.com/GanterPenguin/interception_py#egg=interception_py

[options.packages.find]
where = src